--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # API credentials
 API_KEY=your_api_key_here
 
+# You can put your details/credentials for better security
+
 # Database details
 DB_USER=airflow
 DB_PASSWORD=airflow
@@ -11,7 +13,7 @@ DB_PORT=5432
 # Airflow connection string (Postgres)
 AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/stockdb
 
-# Airflow admin user
+# Airflow details
 AIRFLOW_USERNAME=admin
 AIRFLOW_PASSWORD=admin
 AIRFLOW_FIRSTNAME=Admin
